--- a/app/src/main/res/layout/new_account_activity.xml
+++ b/app/src/main/res/layout/new_account_activity.xml
@@ -112,7 +112,7 @@
             android:textColor="@color/white" />
 
         <TextView
-            android:id="@+id/new_account"
+            android:id="@+id/forget_password_textView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
