--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -24,7 +24,6 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-
         <TextView
             android:id="@+id/appName_textView"
             android:layout_width="match_parent"
@@ -43,7 +42,6 @@
             android:src="@drawable/run"
             android:tint="@color/white" />
 
-        <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,7 +50,7 @@
             android:theme="@style/FilterInputLayout">
 
             <EditText
-                android:id="@+id/loginEmail"
+                android:id="@+id/email_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
@@ -61,7 +59,6 @@
                 android:textColor="@color/white" />
         </android.support.design.widget.TextInputLayout>
 
-        <!--  Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,7 +69,7 @@
             app:passwordToggleTint="@color/white">
 
             <EditText
-                android:id="@+id/loginPassword"
+                android:id="@+id/password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
@@ -91,7 +88,7 @@
             android:textColor="@color/white" />
 
         <TextView
-            android:id="@+id/new_account"
+            android:id="@+id/new_account_textView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
