--- a/app/src/main/res/layout-v21/new_account_activity.xml
+++ b/app/src/main/res/layout-v21/new_account_activity.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:elevation="20dp"
         android:text="@string/app_name_no_space"
         android:textAlignment="center"
         android:textColor="@color/white"
