--- a/app/src/main/res/layout/create_mode_layout.xml
+++ b/app/src/main/res/layout/create_mode_layout.xml
@@ -1,202 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/back_legs">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_mode_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/plus"
+        app:backgroundTint="@color/white"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimaryDark"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:layout_editor_absoluteY="8dp">
 
         <TextView
-            android:gravity="center"
-            android:layout_width="126dp"
-            android:layout_height="44dp"
-            android:id="@+id/mode_name"
-            android:text="@string/mode_name"
-            android:textColor="@color/bootstrap_brand_primary"
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="@string/add_your_mode"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.067"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-        <EditText
-            android:layout_width="222dp"
-            android:layout_height="45dp"
-            android:id="@+id/mode_name_editor"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.875"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.066"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-        <TextView
-            android:id="@+id/desription"
-            android:text="@string/description"
-            android:textColor="@color/bootstrap_brand_primary"
-            android:gravity="center"
-            android:layout_width="126dp"
-            android:layout_height="39dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/mode_name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.049"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-        <EditText
-            android:layout_width="222dp"
-            android:layout_height="38dp"
-            android:id="@+id/description_select"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.863"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/mode_name_editor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.049"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-        <Button
-            android:background="@drawable/plus_box"
-            android:layout_width="55dp"
-            android:layout_height="41dp"
-            android:id="@+id/add_mode"
-            android:layout_marginLeft="8dp"
-            custom:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            custom:layout_constraintRight_toRightOf="parent"
-            custom:layout_constraintHorizontal_bias="0.856"
-            custom:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            custom:layout_constraintVertical_bias="0.588" />
-        <Button
-            android:background="@drawable/minus_box"
-            android:layout_width="45dp"
-            android:layout_height="43dp"
-            android:id="@+id/delete_mode"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="8dp"
-            custom:layout_constraintLeft_toRightOf="@+id/add_mode"
-            android:layout_marginRight="8dp"
-            custom:layout_constraintRight_toRightOf="parent"
-            custom:layout_constraintHorizontal_bias="1.0"
-            custom:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            custom:layout_constraintVertical_bias="0.59" />
-        <Button
-            android:layout_width="190dp"
-            android:layout_height="48dp"
-            android:id="@+id/time_picker"
-            android:text="@string/choose_time_of_mode"
-            android:background="@drawable/my_button"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="2dp"
-            app:layout_constraintTop_toTopOf="parent"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="381dp"
+            android:layout_height="wrap_content"
+            android:theme="@style/FilterInputLayout"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp">
 
-            custom:layout_constraintVertical_bias="0.474"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            <EditText
+                android:id="@+id/mode_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/mode_name"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white" />
+        </android.support.design.widget.TextInputLayout>
 
-        <it.beppi.tristatetogglebutton_library.TriStateToggleButton
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:id="@+id/intensityButton"
-            custom:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            custom:tbOffColor="@color/mb_red_dark"
-            custom:tbMidColor="@color/gray_very_light"
-            custom:tbOnColor="@color/holo_green_light"
-            custom:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            custom:layout_constraintRight_toRightOf="parent"
-            custom:layout_constraintVertical_bias="0.342"
-            />
-        <TextView
-            android:id="@+id/intensityTextView"
-            android:layout_width="111dp"
-            android:layout_height="43dp"
-            custom:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            custom:layout_constraintVertical_bias="0.338"
-            android:layout_marginRight="8dp"
-            custom:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            custom:layout_constraintLeft_toLeftOf="parent"
-            custom:layout_constraintHorizontal_bias="0.929" />
-        <com.hookedonplay.decoviewlib.DecoView
-            xmlns:custom="http://schemas.android.com/apk/res-auto"
-            custom:dv_lineWidth="6dp"
-            android:id="@+id/dynamicArcView"
-            android:layout_width="0dp"
-            android:layout_height="151dp"
-            tools:layout_editor_absoluteX="0dp"
-            custom:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            custom:layout_constraintVertical_bias="0.852" />
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/textPercentage"
-            android:gravity="center"
-            custom:layout_constraintTop_toTopOf="@+id/dynamicArcView"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="@+id/dynamicArcView"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            custom:layout_constraintRight_toRightOf="@+id/dynamicArcView"
-            android:layout_marginLeft="8dp"
-            custom:layout_constraintLeft_toLeftOf="@+id/dynamicArcView" />
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add_mode_button"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/FilterInputLayout"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp">
+
+            <EditText
+                android:id="@+id/description"
+                android:layout_width="362dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/description"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white" />
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            custom:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            custom:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            custom:layout_constraintVertical_bias="0.962"
-            android:layout_marginLeft="8dp"
-            custom:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            custom:layout_constraintRight_toRightOf="parent"
-            custom:layout_constraintHorizontal_bias="0.975" />
-</android.support.constraint.ConstraintLayout>
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/runLeveltextView"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:text="mode level:"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+
+                <it.beppi.tristatetogglebutton_library.TriStateToggleButton
+                    android:id="@+id/intensityButton"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintVertical_bias="0.342"
+                    app:tbMidColor="@color/pause"
+                    app:tbOffColor="@color/stop"
+                    app:tbOnColor="@color/start" />
+
+                <TextView
+                    android:id="@+id/intensityTextView"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/time_picker"
+                    android:layout_width="190dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="6dp"
+                    android:background="@drawable/my_button"
+                    android:text="@string/choose_time_of_mode"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/add_mode"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/plus_box" />
+
+                <Button
+                    android:id="@+id/delete_mode"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/minus_box" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
