--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="fab_margin">20dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="progressBarWidth">5dp</dimen>
+    <dimen name="backgroundProgressBarWidth">2dp</dimen>
 </resources>
